--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>seoulfestivalmap</title>
+
+    <!-- 기본 메타태그 -->
+    <title>서울 축제 지도 | Seoul Festival Map</title>
+    <meta name="description" content="서울의 모든 축제를 한눈에! 축제 위치, 주변 맛집, 날씨 정보를 확인하세요." />
+    <meta name="keywords" content="서울 축제, 축제 지도, 서울 행사, 문화 행사, 축제 일정" />
+    <meta name="author" content="Seoul Festival Map" />
+
+    <!-- Open Graph (Facebook, KakaoTalk 등) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="서울 축제 지도" />
+    <meta property="og:description" content="서울의 모든 축제를 한눈에! 위치, 맛집, 날씨 정보 제공" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://seoulfestivalmap.com" />
+    <meta property="og:locale" content="ko_KR" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="서울 축제 지도" />
+    <meta name="twitter:description" content="서울의 모든 축제를 한눈에!" />
+    <meta name="twitter:image" content="/og-image.png" />
+
+    <!-- 네이버 웹마스터 (인증 후 코드 추가) -->
+    <!-- <meta name="naver-site-verification" content="인증코드" /> -->
   </head>
   <body>
     <div id="root"></div>
