--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
     <!-- 네이버 웹마스터 (인증 후 코드 추가) -->
     <!-- <meta name="naver-site-verification" content="인증코드" /> -->
+
+    <!-- Google Fonts - Schoolbell (칠판 폰트) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
