iphone 미리보기 수정

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="서울 축제 지도" />
     <meta property="og:description" content="서울의 모든 축제를 한눈에! 위치, 맛집, 날씨 정보 제공" />
-    <meta property="og:image" content="/og-image.png" />
-    <meta property="og:url" content="https://seoulfestivalmap.com" />
+    <meta property="og:image" content="https://seoulfestivalmap.vercel.app/og-image.png" />
+    <meta property="og:url" content="https://seoulfestivalmap.vercel.app" />
     <meta property="og:locale" content="ko_KR" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="서울 축제 지도" />
     <meta name="twitter:description" content="서울의 모든 축제를 한눈에!" />
-    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:image" content="https://seoulfestivalmap.vercel.app/og-image.png" />
 
     <!-- 네이버 웹마스터 (인증 후 코드 추가) -->
     <!-- <meta name="naver-site-verification" content="인증코드" /> -->
